# CanvasCTk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
CanvasCTk/: __init__.py  _identity_registry.py  containers.py  dialogs.py  element.py  theme.py  tooltip.py  variables.py  windows.py
CanvasCTk/addons/: LabelButton.py  ScrollableDropdown.py  ScrollableTabview.py  SelectableFrame.py  Tween.py  __init__.py
CanvasCTk/themes/: canvas.json
CanvasCTk/widgets/: Button.py  Checkbox.py  ComboBox.py  Entry.py  Image.py  Item.py  Label.py  OptionMenu.py  ProgressBar.py  RadioButton.py  Scrollbar.py  SegmentedButton.py  Slider.py  Switch.py  Text.py  Textbox.py  Widget.py  __init__.py  _ctk_port.py  _shared.py
examples/: example2.py  example3.py  example4.py  example5.py  example6.py  widgets.py
